# spechls-circt

./: CMakeLists.txt  README.md  circt
.github/workflows/: build-and-test.yml
GecosAPI/: BuiltinAttributes.cpp  CMakeLists.txt  ExtraPassesCAPI.cpp  IR.h  SpecHLSGecosAPI.c  SpecHLSGecosAPI.cpp  SpecHLSGecosAPIPasses.c  SpecHLSGecosAPIPasses.cpp  SpecHLSGecosUtils.h
circt2verilog/: CMakeLists.txt  circt2verilog.cpp
cmake/modules/: FindYosys.cmake
doc/: passes.md
include/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h  InitAllTranslations.h
include/Analysis/: CMakeLists.txt  RecMIIAnalysis.h
include/CAPI/: CMakeLists.txt  SSP.h  SpecHLS.h
include/Common/: Dominance.h  OutliningUtils.h  TransitiveClosure.h
include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/ISADef/: ISADefDialect.h  ISADefOps.h
include/Dialect/ScheduleDialect/: CMakeLists.txt  ScheduleDialectDialect.h  ScheduleDialectDialect.td  ScheduleDialectOps.h  ScheduleDialectOps.td
include/Dialect/SpecHLS/: SpecHLSDialect.h  SpecHLSOps.h  SpecHLSOps.td  SpecHLSTypes.h  SpecHLSUtils.h  mlir-standalone-template.code-workspace
include/GecosAPI/: gecosapi.h
include/ISADef/: ISADefDialect.td  ISADefOps.td  ISADefUtils.h
include/Scheduling/: Algorithms.h  CMakeLists.txt  PassDetails.h  Problem.h  Problems.h  SchedulingProperty.h  SchedulingProperty.td
include/Scheduling/Transforms/: CMakeLists.txt  MobilityPass.h  Passes.h  Passes.td  SchedulePass.h
include/SpecHLS/: CMakeLists.txt  SpecHLSDialect.h  SpecHLSDialect.td  SpecHLSOps.h  SpecHLSOps.td  SpecHLSUtils.h
include/Transforms/: CMakeLists.txt  GammaPatterns.td  Passes.h  Passes.td  SpecHLSConversion.h
include/Transforms/VitisExport/: CFileContent.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  RecMIIAnalysis.cpp
lib/CAPI/: CMakeLists.txt  SSP.cpp  SpecHLSCAPI.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/SpecHLSToArc/: CMakeLists.txt  SpecHLSToArc.cpp
lib/Conversion/SpecHLSToComb/: CMakeLists.txt  GammaConversion.cpp  LUTConversion.cpp  SpecHLSToComb.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/ScheduleDialect/: CMakeLists.txt  ScheduleDialectDialect.cpp  ScheduleDialectOps.cpp
lib/Dialect/SpecHLS/: CMakeLists.txt  SpecHLSDialect.cpp  SpecHLSOps.cpp  SpecHLSTypes.cpp  SpecHLSUtils.cpp
lib/GecosAPI/: CMakeLists.txt  SpecHLSGecosAPI.c
lib/Scheduling/: ASAPScheduler.cpp  CMakeLists.txt  MobilityPass.cpp  Problems.cpp  SchedulePass.cpp
lib/SpecHLS/: CMakeLists.txt  Makefile  SpecHLSDialect.cpp  SpecHLSOps.cpp  SpecHLSTypes.cpp  SpecHLSUtils.cpp  cmake_install.cmake
lib/Tools/: CMakeLists.txt
lib/Tools/TestCaseGenerators/: TestMergeGamma.cpp
lib/Tools/spechls-lsp-server/: CMakeLists.txt  SpecHLSLspServerMain.cpp
lib/Transforms/: CMakeLists.txt  FactorGammaInputs.cpp  GenerateC.cpp  GroupControlLogic.cpp  LUTImporter.cpp  LUTImporter.h  MergeGammas.cpp  MergeLUTs.cpp  RTLILImporter.cpp  RTLILImporter.h  YosysOptimizer.cpp
lib/Transforms/Analysis/: DataflowDominatorAnalysis.cpp  Dominance.cpp  GuardLogicAnalyzer.cpp  PostDataflowDominatorAnalysis.cpp  PostDominatorAnalysis.cpp  TransitiveClosure.cpp
lib/Transforms/Common/: LongestPath.cpp  OutliningUtils.cpp  UnrollInstr.cpp
lib/Transforms/ExportElkJS/: ExportElk.cpp
lib/Transforms/Scheduling/: AutoPipeline.cpp  ConfigurationExcluder.cpp  LocalMobilityPass.cpp  MobilityPass.cpp  Schedule.cpp  TechLibraryBuilder.cpp
lib/Transforms/Simplifier/: EliminateRedundantGammaInputs.cpp  FactorGammaInputs.cpp  GroupControlLogic.cpp  InlineOptimizedModules.cpp  InlineOptimizedModules.h  LUTImporter.cpp  LUTImporter.h  MergeGammas.cpp  MergeLUTs.cpp  RTLILImporter.cpp  RTLILImporter.h  YosysOptimizer.cpp
lib/Transforms/SpecHLSToComb/: CMakeLists.txt  EncoderToComb.cpp  GammaConversion.cpp  LUTConversion.cpp  RollbackConversion.cpp  SpecHLSLUTToComb.cpp  SpecHLSToComb.cpp
lib/Transforms/SpecHLSToSeq/: CMakeLists.txt  DelayConversion.cpp  SpecHLSToSeq.cpp
lib/Transforms/VitisExport/: CFileContent.cpp  Delay.h  ExportVitisHLS.cpp  PrintOperations.cpp  PrintTestbench.cpp  PrintUtils.cpp
spechls-opt/: CMakeLists.txt  spechls-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in
test-gecos-api/: CMakeLists.txt  test-gecos.c
test/Examples/: alpha.mlir  delays.mlir  gammas.mlir  group-control_yosys.mlir  lookuptables.mlir  nestedLUTs.mlir  nestedgammas.mlir  readme.md  test-group-control.mlir  test-yosys-optimizer.mlir  testExportVitis.mlir  test_exportverilog_truthtable.mlir  test_verilog.mlir
test/Examples/Fails/: inlining.mlir
test/Examples/Scheduling/: singleSpec.mlir  test.mlir
test/GSSA/: cf.mlir
test/Lowering/: test-rollback-to-comb.mlir
test/SSP/: problem1.mlir  problem2.mlir
test/ScheduleDialect/: test1.mlir  test3.mlir  test4.mlir
test/Scheduling/: gammaMobility.mlir
test/SpecHLS/: Alpha.mlir  EXT_IDG_0.mlir  EXT_IDG_0_can.mlir  LUTFolding.mlir  alpha.mlir  basic.mlir  delays.mlir  dummy.mlir  gammas-canonicalize.mlir  gammas.mlir  gecos-export.mlir  group-control.mlir  group-control_yosys.mlir  lookuptables.mlir  nestedLUTs.mlir  nestedgammas.mlir  nestedgammas_2.mlir  test-eliminate-redundant-gamma-inputs.mlir  test-ioprint.mlir  test-merge-gammas.mlir  test-merge-gammas1.mlir  test-merge-gammas2.mlir  test-merge-luts.mlir  test_factor_gammas.mlir  test_factor_gammas_2.mlir  test_factor_gammas_3.mlir  test_inlining_optimized.mlir  test_verilog.mlir  yosys_opt_0.mlir
test/SpecHLS/Output/: dummy.mlir.script
test/test-gecos-api/: test-gecos.c
test/yosystest/: cpt.v  example.blif  makefile  yosys.cpp
